DuPont DevSB/src/objects/pse__Est_Vs_Actuals_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for Estimate Vs Actuals</description>
    <fields>
        <fullName>pse__Adjust_Past_Est_on_Records_with_Actuals__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the Est Vs Actuals fields derived from the schedule (e.g., Estimated Hours) should be updated for Est Vs Actuals records that have an end date prior to the start of this week.</inlineHelpText>
        <label>Adjust Past Est on Records with Actuals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Delete_Out_of_Range_Records_With_Actuals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete Est vs Actuals records even if they have actuals set for records that are no longer within a modified schedule&apos;s date range. NOTE: Records without actuals will always be deleted.</description>
        <inlineHelpText>Delete Est vs Actuals records even if they have actuals set for records that are no longer within a modified schedule&apos;s date range. NOTE: Records without actuals will always be deleted.</inlineHelpText>
        <label>Delete Out of Range Records With Actuals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Generate_Monthly_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to generate Est Vs Actuals records by month</inlineHelpText>
        <label>Generate Monthly Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Generate_Quarterly_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to generate Est Vs Actuals records by quarter</inlineHelpText>
        <label>Generate Quarterly Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Generate_Weekly_Records__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Whether to generate est vs actuals by week</inlineHelpText>
        <label>Generate Weekly Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Process_Out_Of_Range_Timecards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Create Est Vs Actuals records for timecards that have hours outside of the assignment&apos;s start and end date. The Est Vs Actuals records will have zero values for estimates on these records.</description>
        <inlineHelpText>Create Est Vs Actuals records for timecards that have hours outside of the assignment&apos;s start and end date. The Est Vs Actuals records will have zero values for estimates on these records.</inlineHelpText>
        <label>Process Out Of Range Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Statuses__c</fullName>
        <defaultValue>&apos;Submitted,Approved&apos;</defaultValue>
        <inlineHelpText>The comma-delimited list of the Timecard Status field values to use when determining if the timecard should be used in the calculation of Estimates vs Actuals</inlineHelpText>
        <label>Timecard Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Update_Project_Manager_From_Project__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, this setting causes updates to the Project Manager field to be reflected in all Est Vs Actuals records for that Project.</description>
        <inlineHelpText>If checked, this setting causes updates to the Project Manager field to be reflected in all Est Vs Actuals records for that Project.</inlineHelpText>
        <label>Update Project Manager From Project</label>
        <type>Checkbox</type>
    </fields>
    <label>Est Vs Actuals Settings</label>
</CustomObject>